--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "mongoose": "^5.3.15",
     "nodemon": "^1.18.8",
     "socket.io": "^2.2.0"
+  },
+  "engines": {
+    "node": "10.3.0"
   }
 }
