--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.15",
     "nodemon": "^1.18.8",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "cron": "^1.4.1"
   },
   "engines": {
     "node": "6.9.5"
